# string_compare

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
